# InverseKinematicsTest

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Chain.h  DisplayWindow.h  WindowShapes.h
src/: Chain.cpp  DisplayWindow.cpp  WindowShapes.cpp  main.cpp
